# pai-a2a-hub

./: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
hub/: config.py  database.py  main.py
hub/middleware/: auth.py
hub/migrations/: env.py
hub/models/: __init__.py  agent.py  auth.py  base.py  task.py
hub/routers/: admin.py  agents.py  discovery.py  tasks.py  wellknown.py
hub/schemas/: a2a.py  auth.py  discovery.py
hub/services/: auth.py  discovery.py  registry.py  task_manager.py
mcp_server/: client.py  server.py
nexus_skill/: SKILL.md
nexus_skill/Workflows/: Ask.md
pai_skill/: SKILL.md
pai_skill/Tools/: A2AClient.help.md  A2AClient.ts
pai_skill/Workflows/: Discover.md  ExecuteTask.md  PollTasks.md  Register.md  SendTask.md
scripts/: generate_key.py  seed_db.py
tests/: conftest.py  test_admin.py  test_agents.py  test_discovery.py  test_health.py  test_tasks.py
